--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <br>
                     <blockquote class="blockquote" >
                         <p>
-                            "I don't believe in taking right decisions. I take decisions and then make them right."
+                            "I don't believe in taking right decisions. I take decisions and then make them right.."
                         </p>
                         <footer>
                             -Ratan TATA
